working on punctuation

--- a/templates/libbed.html
+++ b/templates/libbed.html
@@ -1,11 +1,11 @@
 {% extends 'masterpage.html' %} {% block content %}
 <h1></h1>
+<div id='app'>
 <main>
-  <br>
   <div class='container z-depth-1 roundIt youq'>
     <h2 class='text-lighten-1'>Your Take:</h2>
-    <h4 id='alas' class='red-text text-lighten-2'>{{chunkA}}{{blankA}}{{chunkB}}{{blankB}}{{chunkC}}{{blankC}}{{chunkD}}</h4></div><br>
-  <div class='container z-depth-1 youq roundIt' </div>
+    <h4 id='alas' class='red-text text-lighten-2'>{{chunkA}}{{blankA}}[[days]]{{blankB}}{{chunkC}}{{blankC}}{{chunkD}}</h4></div><br>
+  <div class='container z-depth-1 youq roundIt'>
     <h2> Original Quote:</h2>
     <h4 id='originalQ' class='lime-text text-darken-2'>{{originalQ}}<h4>
 
@@ -23,6 +23,19 @@
     <input type='hidden' value='{{originalQ}}' name='originalQ' id='originalQ' >
   </form>
   </main>
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 
+</div>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/vue"></script>
+  <script>
+  new Vue({
+    delimiters: ['[[', ']]'],
+    el: '#app',
+    data: {
+      title: 'Welcome to My Journal',
+      days: '{{chunkB}}'
+    }
+  })
+  </script>
 {% endblock %}
+//insert app into main div for vue to work
